--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: circleci/node:10
     steps:
+      - checkout
       - run: npm install
       - run: npm run build
       - run: npm run test
@@ -13,6 +14,7 @@ jobs:
     docker:
       - image: circleci/node:8
     steps:
+      - checkout
       - run: npm install
       - run: npm run build
       - run: npm run test
