--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,13 @@
 version: 2
 jobs:
+  test_node_12:
+    docker:
+      - image: circleci/node:12
+    steps:
+      - checkout
+      - run: npm install
+      - run: npm run build
+      - run: npm run test
   test_node_10:
     docker:
       - image: circleci/node:10
@@ -37,6 +45,7 @@ workflows:
     jobs:
       - test_node_8
       - test_node_10
+      - test_node_12
       - release:
           context: NPM release
           filters:
@@ -45,3 +54,4 @@ workflows:
           requires:
             - test_node_8
             - test_node_10
+            - test_node_12
